recursion.lessons.recursion.koch.Crab.scala.code
def crab(levels:Int, length:Double) {
	if (levels < 0) {
		return;
	}
	var angle = 45;
	recule(length);
	droite(angle);
	recule(length);
	droite(angle);
	recule(length);
	angle = angle/Math.sqrt(2);
	crab(levels-1,length/Math.sqrt(2));
}
